tests/NormalTests/paczka1/fuzzy1/54076736.err
Error in line 18: TAKXu A240 45,8
Error in line 21: ft6Wqkw A240 -1,2
Error in line 17: ft6Wqkw A240 20,1
Error in line 14: A768 A498 262,2
Error in line 33: A768 A240 23,3
Error in line 32: 38vOzcTV A498 31,1
